navbar bg color change

--- a/WEEK_2/index.html
+++ b/WEEK_2/index.html
@@ -28,7 +28,7 @@
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-transparent">
+    <nav class="navbar navbar-expand-md navbar-light bg-warning">
         <a class="navbar-brand" href="#">
             <img src="little-dog-transparent.png" alt="Dog"/>
         </a>
