--- a/WEEK_2/index.html
+++ b/WEEK_2/index.html
@@ -14,13 +14,39 @@
    
     <!-- Styles -->
     <style>
-         body {font-family: 'Questrial'; text-align: center;}
-        .navbar-brand img{max-width: 60px;}
-        .jumbotron { height: 500px;} 
-        .display-4  { color: saddlebrown; }
-        .col-md-4 img{max-width: 100%; padding: 0% 0% 3% 0%; display: block; margin-left: auto; margin-right: auto;}
-        .col-md-4 h2{padding: 3% 0% 3% 0%;text-align: center;}
-        .col-md-4 p{padding: 0% 0% 5% 0%; text-align: justify;}
+         body {
+             font-family: 'Questrial';
+            text-align: center;
+        }
+
+        .navbar-brand img {
+            max-width: 50px;
+        }
+        .jumbotron {
+            height: 500px;
+            display: block;
+            padding-top: 0px;
+        } 
+        .display-4  { 
+            color: saddlebrown; 
+        }
+        .col-md-4 img {
+            max-width: 100%; 
+            padding: 0% 0% 3% 0%; 
+            display: block;
+            margin-left: auto;
+             margin-right: auto;
+            }
+
+        .col-md-4 h2 {
+            padding: 3% 0% 3% 0%;
+            text-align: center;
+        }
+        .col-md-4 p {
+            padding: 0% 0% 5% 0%; text-align: justify;
+        }
+        
+
     </style>
 
   </head>
@@ -45,7 +71,7 @@
     </nav>
 
     <!-- Jumbotron -->
-    <div class="jumbotron jumbotron-fluid text-saddlebrown" style="background-image:  url('header.png');">
+    <div class="jumbotron jumbotron-fluid text-saddlebrown " style="background-image:  url('header.png'); background-size:cover; margin-top: 50px; background-position: center;" alt="doggie">">
         <div class="container">
           <h1 class="display-4">We need your help</h1>
         </div>
