--- a/WEEK_3/index.html
+++ b/WEEK_3/index.html
@@ -176,7 +176,7 @@ background-color: rgb(121, 126, 126);
     </div>
 
     <!-- Promo Image 1 -->
-    <img class="img-fluid" src="coffeoclock.jpg" alt="Happy Hour Is Back" />
+    <img class="img-fluid" src="coffeoclock.jpg" alt="Coffee oclock" />
 
     <!-- Table -->
     <a id="menu"></a>  <div class="container">
@@ -227,11 +227,6 @@ background-color: rgb(121, 126, 126);
         </table>
 
     </div>
-
-
-    <!-- Promo Image 2 -->
-    <img style="padding: 2% 0px 60px 0px;" class="img-fluid" src="assets/promo2.jpg"
-        alt="New Italian Roasted Coffee Beans" />
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark">
