--- a/MIDTERM/team.html
+++ b/MIDTERM/team.html
@@ -29,7 +29,7 @@
 
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
-                <img src="../assets/images/logo.png" alt="Flying Outclass Technologies">
+                <img src="....." alt="Flying Outclass Technologies">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
