--- a/MIDTERM/service.html
+++ b/MIDTERM/service.html
@@ -29,7 +29,7 @@
 
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
-                <img src="../assets/images/logo.png" alt="Flying Outclass Technologies">
+                <img src="...." alt="Flying Outclass Technologies">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
-                    <div class="card h-100 text-center">
+                    <div class="card h-100">
                         <img src="medical.png" class="card-img-top" alt="Senior Designer">
                         <div class="card-body">
                             <h4 class="card-title text-info text-center">Suzanne Fenn</h4>
