--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -75,7 +75,7 @@
                 <div class="carousel-item bg-carousel2">
 
                     <div class="carousel-caption">
-                        <h1>YOUR FAVORITE ARTISTS GUARANTEED.</h1>
+                        <h1>HEADLINE.</h1>
                         <a class="btn btn-red btn-lg text-light text-center mt-3" href="pages/about.html"
                             role="button">LEARN MORE</a>
                     </div>
@@ -83,7 +83,7 @@
                 <div class="carousel-item bg-carousel3">
 
                     <div class="carousel-caption">
-                        <h1>ACCESS TO BACKSTAGE AND VIP EVENTS.</h1>
+                        <h1>HEADLINE</h1>
                         <a class="btn btn-red btn-lg text-light text-center mt-3" href="pages/about.html"
                             role="button">LEARN MORE</a>
                     </div>
