--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -108,7 +108,7 @@
           <div class="col-md-8">
             <h1 class="display-4 mb-3 mt-lg-5 mr-lg-5">DELIVERY <span class="text-info">TRANSPORT</span> ANYTIME</h1>
             <h4 class="mt-1 mb-md-5 mr-lg-5">365 days. No Blackout Days.</h4>
-            <p class="lead mr-lg-5">Our guests can reserve our trips anywhere from 3 days to 365 days in advance. No hidden fees or extra cost.</p>
+            <p class="lead mr-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
           <div class="col-md-4">
             <img src="slide22.jpg" class="img-fluid">
@@ -121,7 +121,7 @@
           <div class="col-md-8 order-md-2">
             <h1 class="display-4 mb-3 mt-lg-5 ml-lg-5"><span class="text-info">AIR </span>MOBILITY</h1>
             <h4 class="mt-1 mb-md-5 ml-lg-5">No Cancellation Fees within 48 Hours</h4>
-            <p class="lead ml-lg-5">We understand life sometimes gets in the way and we never want to stop your travel. Our guests can cancel their trip without any fees or charges with 48 hours of their trip.</p>
+            <p class="lead ml-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
           <div class="col-md-4 order-md-1">
             <img src="b.jpg" class="img-fluid">
@@ -134,7 +134,7 @@
           <div class="col-md-8">
             <h1 class="display-4 mb-3 mr-lg-5 mt-lg-5"><span class="text-info">FIVE-STAR</span> EXPERIENCE</h1>
             <h4 class="mt-1 mb-md-5 mr-lg-5">We plan every little detail, so you don't have to.</h4>
-            <p class="lead mr-lg-5">Our dedicated advisors get to know all your travel preferences and give nothing but the ulimate experience throughout all your trips. Enjoy first class flights, trips, pre-trip planning, on-site concierge service, and daily housekeeping.</p>
+            <p class="lead mr-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
           <div class="col-md-4">
             <img src="c.png" class="img-fluid">
