--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -120,7 +120,7 @@
         <div class="row featurette">
           <div class="col-md-8 order-md-2">
             <h1 class="display-4 mb-3 mt-lg-5 ml-lg-5"><span class="text-info">AIR </span>MOBILITY</h1>
-            <h4 class="mt-1 mb-md-5 ml-lg-5">No Cancellation Fees within 48 Hours</h4>
+            <h4 class="mt-1 mb-md-5 ml-lg-5">Enable safe, autonomous and eco-friendly </h4>
             <p class="lead ml-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
           <div class="col-md-4 order-md-1">
@@ -133,7 +133,7 @@
         <div class="row featurette">
           <div class="col-md-8">
             <h1 class="display-4 mb-3 mr-lg-5 mt-lg-5"><span class="text-info">FIVE-STAR</span> EXPERIENCE</h1>
-            <h4 class="mt-1 mb-md-5 mr-lg-5">We plan every little detail, so you don't have to.</h4>
+            <h4 class="mt-1 mb-md-5 mr-lg-5">Intelligent, Unmanned and Networked</h4>
             <p class="lead mr-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
           <div class="col-md-4">
