--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -14,6 +14,8 @@
     
      <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
 
+ <!-- icon --> 
+     <link rel="icon" href="logo.png" type="image/png" sizes="16x16">
 
     <!-- Icon Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -32,7 +34,7 @@
 
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
-                <img src="....." alt="Flying Outclass Technologies">
+                <img src="logo.png" alt="Flying Outclass Technologies">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
