--- a/MIDTERM/team.html
+++ b/MIDTERM/team.html
@@ -29,7 +29,7 @@
 
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
-                <img src="....." alt="Flying Outclass Technologies">
+                <img src="logo.png" alt="Flying Outclass Technologies">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
                     <div class="card h-100">
                         <img src="../assets/images/t1.jpg" class="card-img-top" alt="CEO">
                         <div class="card-body">
-                            <h4 class="card-title text-body text-center">Sebastian Paz</h4>
+                            <h4 class="card-title text-body text-center">Edward</h4>
                             <p class="card-text text-center">CEO and co founder </p>
                         </div>
                         <div class="card-footer text-center" id="icons">
@@ -106,7 +106,7 @@
                     <div class="card h-100">
                         <img src="../assets/images/t3.jpg" class="card-img-top" alt="Senior Developer">
                         <div class="card-body">
-                            <h4 class="card-title text-body text-center">Ryan Holman</h4>
+                            <h4 class="card-title text-body text-center">Nick Ryan</h4>
                             <p class="card-text text-center">CfFO</p>
                         </div>
                         <div class="card-footer text-center" id="icons">
@@ -124,7 +124,7 @@
                     <div class="card h-100">
                         <img src="../assets/images/t4.jpg" class="card-img-top" alt="Senior Designer">
                         <div class="card-body">
-                            <h4 class="card-title text-body text-center">Suzanne Fenn</h4>
+                            <h4 class="card-title text-body text-center">Jolen Scott</h4>
                             <p class="card-text text-center">COO</p>
                         </div>
                         <div class="card-footer text-center" id="icons">
