--- a/MIDTERM/service.html
+++ b/MIDTERM/service.html
@@ -90,7 +90,7 @@
                     <div class="card h-100">
                         <img src="../assets/images/t3.jpg" class="card-img-top" alt="Senior Developer">
                         <div class="card-body">
-                            <h4 class="card-title text-info text-center">Ryan Holman</h4>
+                            <h4 class="card-title text-info text-center">Logistics</h4>
                             <p class="card-text text-center">CfFO</p>
                         </div>
                       
@@ -100,7 +100,7 @@
                     <div class="card h-100">
                         <img src="medical.png" class="card-img-top" alt="Senior Designer">
                         <div class="card-body">
-                            <h4 class="card-title text-info text-center">Suzanne Fenn</h4>
+                            <h4 class="card-title text-info text-center">Medical Aid</h4>
                             <p class="card-text text-center">COO</p>
                         </div>
                      
