--- a/MIDTERM/team.html
+++ b/MIDTERM/team.html
@@ -68,7 +68,7 @@
             <div class="card-deck">
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
                     <div class="card h-100">
-                        <img src="../assets/images/t1.jpg" class="card-img-top" alt="CEO">
+                        <img src="edward.jpeg" class="card-img-top" alt="CEO">
                         <div class="card-body">
                             <h4 class="card-title text-body text-center">Edward</h4>
                             <p class="card-text text-center">CEO and co founder </p>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
                     <div class="card h-100">
-                        <img src="../assets/images/t3.jpg" class="card-img-top" alt="Senior Developer">
+                        <img src="jj.jpeg" class="card-img-top" alt="Senior Developer">
                         <div class="card-body">
                             <h4 class="card-title text-body text-center">Nick Ryan</h4>
                             <p class="card-text text-center">CfFO</p>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
                     <div class="card h-100">
-                        <img src="../assets/images/t4.jpg" class="card-img-top" alt="Senior Designer">
+                        <img src="jolen.jpeg" class="card-img-top" alt="Senior Designer">
                         <div class="card-body">
                             <h4 class="card-title text-body text-center">Jolen Scott</h4>
                             <p class="card-text text-center">COO</p>
