--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -110,7 +110,7 @@
           <div class="col-md-8">
             <h1 class="display-4 mb-3 mt-lg-5 mr-lg-5">DELIVERY <span class="text-info">TRANSPORT</span> ANYTIME</h1>
             <h4 class="mt-1 mb-md-5 mr-lg-5">365 days. No Blackout Days.</h4>
-            <p class="lead mr-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="lead mr-lg-5">Our smart drone delivery solution realizes smart functions of automatic charging of AAVs, automatic sorting of warehouse and parcels, self-service sending and receiving of parcels, etc. In the effort, it will realize unmanned operation in the application scenario of express logistics. </p>
           </div>
           <div class="col-md-4">
             <img src="slide22.jpg" class="img-fluid">
@@ -134,9 +134,9 @@
   
         <div class="row featurette">
           <div class="col-md-8">
-            <h1 class="display-4 mb-3 mr-lg-5 mt-lg-5"><span class="text-info">FIVE-STAR</span> EXPERIENCE</h1>
+            <h1 class="display-4 mb-3 mr-lg-5 mt-lg-5"><span class="text-info">Multi-Protection,</span>Safe and Smart</h1>
             <h4 class="mt-1 mb-md-5 mr-lg-5">Intelligent, Unmanned and Networked</h4>
-            <p class="lead mr-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="lead mr-lg-5">To enhance safety, our drones uses fault-tolerant design with dual sensors, dual GPS, and coaxial dual-propellers. Its intelligent features include auto return, auto landing and one-touch controls to ensure the protection of operators, the drone, and its payload.</p>
           </div>
           <div class="col-md-4">
             <img src="c.png" class="img-fluid">
