--- a/MIDTERM/service.html
+++ b/MIDTERM/service.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
                     <div class="card h-100">
-                        <img src="../assets/images/t3.jpg" class="card-img-top" alt="Senior Developer">
+                        <img src="logistics.png" class="card-img-top" alt="Senior Developer">
                         <div class="card-body">
                             <h4 class="card-title text-info text-center">Logistics</h4>
                             <p class="card-text text-center">CfFO</p>
