Team page fixed
images

--- a/MIDTERM/team.html
+++ b/MIDTERM/team.html
@@ -70,7 +70,7 @@
                     <div class="card h-100">
                         <img src="edward.jpeg" class="card-img-top" alt="CEO">
                         <div class="card-body">
-                            <h4 class="card-title text-body text-center">Edward</h4>
+                            <h4 class="card-title text-body text-center">Edward Jonsen</h4>
                             <p class="card-text text-center">CEO and co founder </p>
                         </div>
                         <div class="card-footer text-center" id="icons">
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
                     <div class="card h-100">
-                        <img src="../assets/images/t2.jpg" class="card-img-top" alt="Co-Founder">
+                        <img src="girl2.jpeg" class="card-img-top" alt="Co-Founder">
                         <div class="card-body">
                             <h4 class="card-title text-body text-center">Samantha Guidice</h4>
                             <p class="card-text text-center">COT and Co-Founder</p>
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
                     <div class="card h-100">
-                        <img src="jolen.jpeg" class="card-img-top" alt="Senior Designer">
+                        <img src="girl.jpeg" class="card-img-top" alt="Senior Designer">
                         <div class="card-body">
                             <h4 class="card-title text-body text-center">Jolen Scott</h4>
                             <p class="card-text text-center">COO</p>
