--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -70,7 +70,7 @@
                 <div class="carousel-item bg-carousel1 active">
                     <div class="carousel-caption">
                         <h1>GET READY TO FLY.</h1>
-                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="pages/about.html"
+                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="about.html"
                             role="button">LEARN MORE</a>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
 
                     <div class="carousel-caption">
                         <h1>HEADLINE.</h1>
-                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="pages/about.html"
+                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="about.html"
                             role="button">LEARN MORE</a>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
 
                     <div class="carousel-caption">
                         <h1>HEADLINE</h1>
-                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="pages/about.html"
+                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="about.html"
                             role="button">LEARN MORE</a>
                     </div>
                 </div>
