--- a/MIDTERM/about.html
+++ b/MIDTERM/about.html
@@ -21,10 +21,11 @@
     <title>about</title>
 </head>
 
-<body class="bg-black">
+<body class="bg-white">
     <header>
+         
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-md navbar-light bg-white">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-white">
 
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
@@ -38,8 +39,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
                     <a class="nav-item nav-link" href="index.html">HOME</span></a>
-                    <a class="nav-item nav-link active"href="about.html">ABOUT</a>
-                    <a class="nav-item nav-link href="service.html">SERVICES</a>
+                    <a class="nav-item nav-link active" href="about.html">ABOUT</a>
+                    <a class="nav-item nav-link" href="service.html">SERVICES</a>
                     <a class="nav-item nav-link" href="team.html">TEAM</a>
                 </div>
                 <!-- Social Media Icons -->
@@ -63,15 +64,12 @@
             <div class="col-lg-6 no-gutters">
                 <div class="rightside d-flex justify-content-center align-items-center">
                     <div>
-                        <p class="text-justify text-secondary">Welcome to <strong>Red Arena</strong>! We specialize in entertainment,
-                            and we think it's time to revolutionize the way you experience concerts. Our headquarters
-                            location is in Los Angeles, where we work together with the best artists and leaders in the
-                            music industry. Our mission is to create memorable concert experiences. With our service,
-                            you can go to all concerts available in the United States and meet your favorite artists for
-                            an affordable price. So, are you ready to live VIP? <br> <br> <a href="#more">Learn
+                        <p class="text-justify text-secondary">By 2030, 60% of the world's population will be urban. This significant population growth is expected to create a real need for innovative mobility options as ground infrastructure becomes increasingly congested. Providing people with a safe, sustainable and convenient solution that leverages the airspace above cities could be a solution.
+                            Since 2014, <strong>Flying Outclass Technologies</strong> has been exploring how recent technology advancements – from battery capacity and autonomy to electric propulsion – can help drive the development of new kinds of aerial vehicles. In May 2018, we created Flying Outclass Technologies to take our exploration into cutting-edge commercial urban air mobility solutions and services to the next level.
+                            Flying Outclass Technologies focuses on better connecting people by bringing the safety, convenience and joy of flight to city inhabitants. To do so, it takes a holistic approach to urban air mobility, seamlessly integrating a variety of critical components. <br> <br> <a href="#more">Learn
                                 More...</a></p>
                         <a class="btn btn-red btn-lg text-light text-center mt-3" href="service.html"
-                            role="button">SIGN ME UP!</a>
+                            role="button">Check out or services!</a>
                     </div>
                 </div>
             </div>
@@ -81,30 +79,24 @@
             <div class="row downside align-items-center">
                 <div class="col-lg-4 margin text-secondary">
                     <h3 class="display-4 text-info">Mission</h3>
-                    <p> Lorem lean startup ipsum product market fit customer development acquihire technical cofounder.
-                        User engagement A/B testing shrink a market venture capital pitch deck. Social bookmarking group
-                        buying crowded market pivot onboarding freemium prototype ping pong. User generated content in
-                        real-time will have multiple touchpoints for offshoring.</p>
+                    <p> Enable safe, autonomous and eco-friendly 
+                            air mobility for everyone</p>
                 </div>
                 <div class="col-lg-4 margin text-secondary">
                     <h3 class="display-4 text-info">Vision</h3>
-                    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
-                        approaches to corporate strategy foster collaborative thinking to further the overall value
-                        proposition. Organically grow the holistic world view of disruptive innovation via workplace
-                        diversity and empowerment. Bring to the table strategies to ensure proactive domination.</p>
+                    <p>Become the World’s Foremost Authority on Intelligent Aerial Vehicles</p>
                 </div>
+
                 <div class="col-lg-4 margin text-secondary">
                     <h3 class="display-4 text-info">Values</h3>
-                    <p>Disrupt inspire and think tank, social entrepreneur but preliminary thinking think tank
-                        compelling. Inspiring, invest synergy capacity building, white paper; silo, unprecedented
-                        challenge B-corp problem-solvers. Preliminary thinking, indicators entrepreneur, mass
-                        incarceration; grit we must stand up agile policymaker citizen-centered.</p>
+                    <p> We are guided by a set of six values; Customer focus, integrity, respect, creativity, reliability and teamwork</stong></p>
                 </div>
             </div>
         </div>
     </main>
 
-    <footer></footer>
+    <footer>   <!-- Concert Image -->
+        <img class="img-fluid concert" src="footer-about.png" alt="Concert" /></footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
