--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -30,7 +30,7 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-md navbar-light bg-white">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-white">
 
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
@@ -77,7 +77,7 @@
                 <div class="carousel-item bg-carousel2">
 
                     <div class="carousel-caption">
-                        <h1>HEADLINE.</h1>
+                        <h1>The Era of Urban Air Mobility is Coming</h1>
                         <a class="btn btn-red btn-lg text-light text-center mt-3" href="about.html"
                             role="button">LEARN MORE</a>
                     </div>
@@ -85,9 +85,8 @@
                 <div class="carousel-item bg-carousel3">
 
                     <div class="carousel-caption">
-                        <h1>HEADLINE</h1>
-                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="about.html"
-                            role="button">LEARN MORE</a>
+                        <h1>IT IS A LIFESYLE, A WAY OF TRAVEL; THE FUTURE IS NOW.</h1>
+                       
                     </div>
                 </div>
             </div>
