--- a/MIDTERM/team.html
+++ b/MIDTERM/team.html
@@ -22,10 +22,10 @@
     <title>Team</title>
 </head>
 
-<body class="bg-black">
+<body class="bg-white">
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-md navbar-light bg-white">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light bg-white">
 
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
