--- a/MIDTERM/about.html
+++ b/MIDTERM/about.html
@@ -95,8 +95,8 @@
         </div>
     </main>
 
-    <footer>   <!-- Concert Image -->
-        <img class="img-fluid concert" src="footer-about.png" alt="Concert" /></footer>
+    <footer>   <!-- drone Image -->
+        <img class="img-fluid drone" src="footer-about.png" alt="drone" /></footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
