--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -122,7 +122,9 @@
           <div class="col-md-8 order-md-2">
             <h1 class="display-4 mb-3 mt-lg-5 ml-lg-5"><span class="text-info">AIR </span>MOBILITY</h1>
             <h4 class="mt-1 mb-md-5 ml-lg-5">Enable safe, autonomous and eco-friendly </h4>
-            <p class="lead ml-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p class="lead ml-lg-5">Traditional infrastructure such as large airport or runway is not required, suiting the scenario
+                    demands of urban air mobility and serving as an effective way to relieve the current traffic
+                    congestion pressures. </p>
           </div>
           <div class="col-md-4 order-md-1">
             <img src="b.jpg" class="img-fluid">
