--- a/MIDTERM/team.html
+++ b/MIDTERM/team.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3 mb-5">
                     <div class="card h-100">
-                        <img src="girl.jpeg" class="card-img-top" alt="Senior Designer">
+                        <img src="girl.png" class="card-img-top" alt="Senior Designer">
                         <div class="card-body">
                             <h4 class="card-title text-body text-center">Jolen Scott</h4>
                             <p class="card-text text-center">COO</p>
