--- a/MIDTERM/service.html
+++ b/MIDTERM/service.html
@@ -70,7 +70,7 @@
                     <div class="card h-100">
                         <img src="transport.png" class="card-img-top" alt="CEO">
                         <div class="card-body">
-                            <h4 class="card-title text-info text-center">Passenger Transportation</h4>
+                            <h4 class="card-title text-info text-center">Transportation</h4>
                             
                         </div>
                        
