--- a/MIDTERM/index.html
+++ b/MIDTERM/index.html
@@ -78,14 +78,13 @@
 
                     <div class="carousel-caption">
                         <h1>The Era of Urban Air Mobility is Coming</h1>
-                        <a class="btn btn-red btn-lg text-light text-center mt-3" href="about.html"
-                            role="button">LEARN MORE</a>
+                       
                     </div>
                 </div>
                 <div class="carousel-item bg-carousel3">
 
                     <div class="carousel-caption">
-                        <h1>IT IS A LIFESYLE, A WAY OF TRAVEL; THE FUTURE IS NOW.</h1>
+                        <h1>It is a lifestyle, a way of travel; the future is now.</h1>
                        
                     </div>
                 </div>
