--- a/WEEK_9/index.html
+++ b/WEEK_9/index.html
@@ -92,7 +92,7 @@
                           <img class="img-fluid color img-thumbnail" src="img1.png" alt="">
                   </div>
                   <div class="col-lg-3 col-md-4 col-6 d-block mb-4 h-100">
-                          <img class="img-fluid color img-thumbnail" src="img2.JPG" alt="">
+                          <img class="img-fluid color img-thumbnail" src="img2.png" alt="">
                   </div>
                   <div class="col-lg-3 col-md-4 col-6 d-block mb-4 h-100">
                           <img class="img-fluid color img-thumbnail" src="img3.png" alt="">
