--- a/WEEK_12/location.html
+++ b/WEEK_12/location.html
@@ -31,10 +31,10 @@
     <!-- Navbar  -->
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav mx-auto">
-        <a class="nav-item nav-link" href="file:///Users/juliawetterdal/Desktop/Web_design_3/WEEK_12/index.html"><strong>HOME</strong></span></a>
+        <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/WEEK_12/"><strong>HOME</strong></span></a>
         <a class="nav-item nav-link" href=""><strong>SHOP</strong></a>
-        <a class="nav-item nav-link" href="file:///Users/juliawetterdal/Desktop/Web_design_3/WEEK_12/learn.html"><strong>LEARN</strong></a>
-        <a class="nav-item nav-link active" href="file:///Users/juliawetterdal/Desktop/Web_design_3/WEEK_12/location.html"><strong>LOCATION</strong></a>
+        <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/WEEK_12/learn.html"><strong>LEARN</strong></a>
+        <a class="nav-item nav-link active" href="https://jwetterdal.github.io/Web_design_3/WEEK_12/location.html"><strong>LOCATION</strong></a>
       </div>
       <!-- Social Media Icons  -->
       <ul class="nav navbar-nav navbar-right">
