--- a/Final/index.html
+++ b/Final/index.html
@@ -31,8 +31,8 @@
     <!-- Navbar  -->
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav mx-auto">
-        <a class="nav-item nav-link active" href="/index.html"><strong>HOME</strong></span></a>
-        <a class="nav-item nav-link" href="/shop.html"><strong>SHOP</strong></a>
+        <a class="nav-item nav-link active" href="https://jwetterdal.github.io/Web_design_3/Final/index.html"><strong>HOME</strong></span></a>
+        <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/shop.html"><strong>SHOP</strong></a>
         <a class="nav-item nav-link" href=""><strong>LEARN</strong></a>
         <a class="nav-item nav-link" href=""><strong>LOCATION</strong></a>
         <a class="nav-link" href="cart.html"><button type="button" class="btn btn-sm btn-outline-light"><i
