--- a/Final/shop.html
+++ b/Final/shop.html
@@ -61,11 +61,11 @@
       
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="theiarug.html">
+                  <a href="foam.html">
                   <div class="card-img-top" style="background-image: url(shop1.jpeg);">
                   </div>
                   <div class="card-body text-center d-flex flex-column">
-                    <h4 class="mb-1">Theia Rug</h4>
+                    <h4 class="mb-1">The Fab Foam</h4>
                     <h6 class="text-muted mb-5">Prices starting at $21</h6>
                   </a>
                     <button type="submit" class="btn btn-block btn-color mt-auto add-cart"><b>ADD TO CART</b></button>
@@ -74,11 +74,11 @@
               </div>
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="zigzagrug.html">
+                  <a href="Cleanser.html">
                   <div class="card-img-top" style="background-image: url(product2.png);">
                   </div>
                   <div class="card-body text-center d-flex flex-column">
-                    <h4 class="mb-1">ZigZag Rug</h4>
+                    <h4 class="mb-1">THE Cleanser.</h4>
                     <h6 class="text-muted mb-5">Prices starting at $21</h6>
                     </a>
                     <button type="submit" class="btn btn-block btn-color mt-auto add-cart"><b>ADD TO CART</b></button>
