--- a/Final/index.html
+++ b/Final/index.html
@@ -114,7 +114,7 @@
                   </div>
                   <div class="col-md-4 text-center p-3">
                     <a href="foam.html"><img src="news2.png" class="img-fluid" alt="foam">
-                      <h4 class="mb-1 mt-3">The Fab Foam</h4>
+                      <h4 class="mb-1 mt-3">The Moisturizer</h4>
                       <h6 class="text-muted mt-3">Price $26</h6>
                     </a>
                   </div>
