--- a/Final/index.html
+++ b/Final/index.html
@@ -16,7 +16,7 @@
   <!-- Styles -->
   <link href="style.css" rel="stylesheet" type="text/css" />
 
-  <title>HTML Multimedia</title>
+  <title>CUROLOGY</title>
 </head>
 
 <body>
