--- a/Final/shop.html
+++ b/Final/shop.html
@@ -16,7 +16,7 @@
   <!-- Styles -->
   <link href="style.css" rel="stylesheet" type="text/css" />
 
-  <title>HTML Multimedia</title>
+  <title>CUROLOGY</title>
 </head>
 
 <body>
@@ -61,7 +61,7 @@
       
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="foam.html">
+                  <a href="https://jwetterdal.github.io/Web_design_3/Final/foam.html">
                   <div class="card-img-top" style="background-image: url(shop1.jpeg);">
                   </div>
                   <div class="card-body text-center d-flex flex-column">
@@ -87,7 +87,7 @@
               </div>
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="floral.html">
+                  <a href="">
                   <div class="card-img-top" style="background-image: url(shop3.png);"></div>
                   <div class="card-body text-center d-flex flex-column">
                     <h4 class="mb-1">Floral Melt Rug</h4>
@@ -99,7 +99,7 @@
               </div>
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="pinksunset.html">
+                  <a href="">
                   <div class="card-img-top" style="background-image: url(shop4.jpg);"></div>
                   <div class="card-body text-center d-flex flex-column">
                     <h4 class="mb-1">Pink Sunset</h4>
