--- a/Final/foam.html
+++ b/Final/foam.html
@@ -17,7 +17,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="product.css">
 
-  <title>HTML Multimedia</title>
+  <title>CUROLOGY</title>
 </head>
 
 <body>
