--- a/Final/cleanse.html
+++ b/Final/cleanse.html
@@ -63,11 +63,11 @@
                                     <ol class="carousel-indicators">
                                     </ol>
                                     <div class="carousel-inner">
-                                        <div class="carousel-item item-carousel foam-1 active">
+                                        <div class="carousel-item item-carousel cleanse-1 active">
                                         </div>
-                                        <div class="carousel-item item-carousel foam-2">
+                                        <div class="carousel-item item-carousel cleanse-2">
                                         </div>
-                                        <div class="carousel-item item-carousel foam-3">
+                                        <div class="carousel-item item-carousel cleanse-3">
                                         </div>
                                     </div>
                                     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 pr-5 pl-5 mb-5">
-                                <h1 class="text-center"><b>The Fab Foam</b></h1>
+                                <h1 class="text-center"><b>THE Cleanser</b></h1>
             
                                 <!--Size dropdown content-->
                                 <div id="option1" class="size_chart">
