--- a/Final/shop.html
+++ b/Final/shop.html
@@ -62,7 +62,7 @@
               <div class="col mb-4">
                 <div class="card h-100">
                   <a href="https://jwetterdal.github.io/Web_design_3/Final/foam.html">
-                  <div class="card-img-top" style="background-image: url(shop1.jpeg);">
+                  <div class="card-img-top" style="background-image: url(shop/shop-foam.jpg);">
                   </div>
                   <div class="card-body text-center d-flex flex-column">
                     <h4 class="mb-1">The Fab Foam</h4>
@@ -74,8 +74,8 @@
               </div>
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="Cleanser.html">
-                  <div class="card-img-top" style="background-image: url(product2.png);">
+                  <a href="file:///Users/juliawetterdal/Desktop/Web_design_3/Final/cleanse.html">
+                  <div class="card-img-top" style="background-image: url(shop/shop-cleanse.png);">
                   </div>
                   <div class="card-body text-center d-flex flex-column">
                     <h4 class="mb-1">THE Cleanser.</h4>
@@ -88,9 +88,9 @@
               <div class="col mb-4">
                 <div class="card h-100">
                   <a href="">
-                  <div class="card-img-top" style="background-image: url(shop3.png);"></div>
+                  <div class="card-img-top" style="background-image: url(shop/shop-moiz.png);"></div>
                   <div class="card-body text-center d-flex flex-column">
-                    <h4 class="mb-1">Floral Melt Rug</h4>
+                    <h4 class="mb-1">The Moisturizer.</h4>
                     <h6 class="text-muted mb-5">Prices starting at $21</h6>
                   </a>
                     <button type="submit" class="btn btn-block btn-color mt-auto add-cart"><b>ADD TO CART</b></button>
@@ -100,7 +100,7 @@
               <div class="col mb-4">
                 <div class="card h-100">
                   <a href="">
-                  <div class="card-img-top" style="background-image: url(shop4.jpg);"></div>
+                  <div class="card-img-top" style="background-image: url(shop/kit.jpg);"></div>
                   <div class="card-body text-center d-flex flex-column">
                     <h4 class="mb-1">Pink Sunset</h4>
                     <h6 class="text-muted mb-5">Prices starting at $21</h6>
