--- a/Final/index.html
+++ b/Final/index.html
@@ -107,7 +107,7 @@
                     <h1>New arrivals</h1>
                   </div>
                   <div class="col-md-4 text-center p-3">
-                    <a href=""><img src="routine.jpg" class="img-fluid" alt="routine">
+                    <a href=""><img src="news-kit.png" class="img-fluid" alt="routine">
                       <h4 class="mb-1 mt-3">Cleaning routine kit.</h4>
                       <h6 class="text-muted mt-3">Price $75</h6>
                     </a>
@@ -119,7 +119,7 @@
                     </a>
                   </div>
                   <div class="col-md-4 text-center p-3">
-                    <a href=""><img src="news22.jpg" class="img-fluid" alt="hydrate">
+                    <a href=""><img src="news3.png" class="img-fluid" alt="hydrate">
                       <h4 class="mb-1 mt-3">You Gotta Hydrate!</h4>
                       <h6 class="text-muted mt-3">Price $22</h6>
                     </a>
