--- a/Final/shop.html
+++ b/Final/shop.html
@@ -74,7 +74,7 @@
               </div>
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="file:///Users/juliawetterdal/Desktop/Web_design_3/Final/cleanse.html">
+                  <a href="https://jwetterdal.github.io/Web_design_3/Final/cleanse.html">
                   <div class="card-img-top" style="background-image: url(shop/shop-cleanse.png);">
                   </div>
                   <div class="card-body text-center d-flex flex-column">
