--- a/Final/index.html
+++ b/Final/index.html
@@ -107,7 +107,7 @@
                     <h1>New arrivals</h1>
                   </div>
                   <div class="col-md-4 text-center p-3">
-                    <a href=""><img src="news-kit.png" class="img-fluid" alt="routine">
+                    <a href="https://jwetterdal.github.io/Web_design_3/Final/kit.html"><img src="news-kit.png" class="img-fluid" alt="routine">
                       <h4 class="mb-1 mt-3">Cleaning routine kit.</h4>
                       <h6 class="text-muted mt-3">Price $75</h6>
                     </a>
