--- a/Final/kit.html
+++ b/Final/kit.html
@@ -67,7 +67,7 @@
                                         </div>
                                         <div class="carousel-item item-carousel kit-2">
                                         </div>
-                                        <div class="carousel-item item-carousel kit3-3">
+                                        <div class="carousel-item item-carousel kit-3">
                                         </div>
                                     </div>
                                     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
