--- a/Final/shop.html
+++ b/Final/shop.html
@@ -87,7 +87,7 @@
               </div>
               <div class="col mb-4">
                 <div class="card h-100">
-                  <a href="file:///Users/juliawetterdal/Desktop/Web_design_3/Final/moiz.html">
+                  <a href="/moiz.html">
                   <div class="card-img-top" style="background-image: url(shop/shop-moiz.png);"></div>
                   <div class="card-body text-center d-flex flex-column">
                     <h4 class="mb-1">The Moisturizer.</h4>
