--- a/Final/contact.html
+++ b/Final/contact.html
@@ -34,8 +34,8 @@
             <div class="navbar-nav mx-auto">
               <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/index.html"><strong>HOME</strong></span></a>
               <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/shop.html"><strong>SHOP</strong></a>
-              <a class="nav-item nav-link" href="/learn.html"><strong>LEARN</strong></a>
-              <a class="nav-item nav-link active" href="/about.html"><strong>ABOUT</strong></a>
+              <a class="nav-item nav-link" href="https://jwetterdal.github.io/Web_design_3/Final/learn.html"><strong>LEARN</strong></a>
+              <a class="nav-item nav-link active" href="https://jwetterdal.github.io/Web_design_3/Final/contact.html"><strong>contact</strong></a>
               <a class="nav-link" href="cart.html"><button type="button" class="btn btn-sm btn-outline-light"><i
                   class="fa fa-shopping-cart"></i> Cart <span class="count">0</span></button></a>
             </div>
